--- a/BSMTTasks_UnitTests/Manifests/manifest.json
+++ b/BSMTTasks_UnitTests/Manifests/manifest.json
@@ -7,11 +7,11 @@
   "name": "BSMTTasks",
   "version": "1.1.0",
   "dependsOn": {
+    "BSIPA":  "^4.3.0",
     "BeatSaberMarkupLanguage": "^1.2.2",
     "BS Utils": "^1.4.8"
   },
   "links": {
     "project-source": "https://github.com/Zingabopp/BSMTTasks"
-  },
-  "features": []
+  }
 }
