Switched to SimpleJSON, implemented more properties

--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.TargetFramework.props
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.TargetFramework.props
@@ -22,4 +22,5 @@
   <UsingTask TaskName="BeatSaberModdingTools.Tasks.IsProcessRunning" AssemblyFile="$(BSMTTaskAssembly)" />
   <UsingTask TaskName="BeatSaberModdingTools.Tasks.ReplaceInFile" AssemblyFile="$(BSMTTaskAssembly)" />
   <UsingTask TaskName="BeatSaberModdingTools.Tasks.ZipDir" AssemblyFile="$(BSMTTaskAssembly)" />
+  <UsingTask TaskName="BeatSaberModdingTools.Tasks.GenerateManifest" AssemblyFile="$(BSMTTaskAssembly)" />
 </Project>
