GenerateManifest: Added Misc and PluginHint inputs

--- a/TestProject/Directory.Build.props
+++ b/TestProject/Directory.Build.props
@@ -21,6 +21,15 @@
         }
       }
     </Feature>
+    <Misc>
+      {
+        "Other-Misc" : {
+          "name" : "New-Misc-name"
+      },
+        "plugin-hint" : "Overwritten.Plugin.Type"
+      }
+    </Misc>
+    <PluginHint>ActualPluginType</PluginHint>
   </PropertyGroup>
   <ItemGroup>
     <Dependency Include="BSIPA" Version="^4.4.0"/>
