--- a/TestProject/Directory.Build.props
+++ b/TestProject/Directory.Build.props
@@ -1,5 +1,6 @@
 ﻿<Project>
   <UsingTask TaskName="GenerateManifest" AssemblyFile="../BeatSaberModdingTools.Tasks/bin/$(Configuration)/netstandard2.0/BeatSaberModdingTools.Tasks.dll" />
+  <UsingTask TaskName="IsProcessRunning" AssemblyFile="../BeatSaberModdingTools.Tasks/bin/$(Configuration)/netstandard2.0/BeatSaberModdingTools.Tasks.dll" />
   <PropertyGroup>
     <GameVersion>1.14.0</GameVersion>
     <Description>Description...</Description>
