--- a/TestProject/Directory.Build.targets
+++ b/TestProject/Directory.Build.targets
@@ -1,5 +1,9 @@
 ﻿<Project>
   <Target Name="GenerateManifestTest" AfterTargets="Build">
+    <IsProcessRunning ProcessName="explorer">
+      <Output TaskParameter="IsRunning" PropertyName="IsRunning" />
+    </IsProcessRunning>
+    <Message Text="Explorer Running: '$(IsRunning)'" Importance="high" />
     <!--Version="$(Version)"-->
     <GenerateManifest Id="$(AssemblyName)Id"
                       Name="$(AssemblyName)"
