--- a/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
+++ b/BeatSaberModdingTools.Tasks/BeatSaberModdingTools.Tasks.csproj
@@ -1,103 +1,124 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <id>BeatSaberModdingTools.Tasks</id>
-    <Title>BeatSaberModdingTools.Tasks</Title>
-    <Version>1.4.3</Version>
-    <Authors>Zingabopp</Authors>
-    <Company>Zingabopp</Company>
-    <Description>A set of MSBuild Tasks created for Beat Saber Modding Tools.</Description>
-    <Copyright>Copyright © Zingabopp 2020</Copyright>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <RepositoryType>git</RepositoryType>
-    <PackageProjectUrl>https://github.com/Zingabopp/BeatSaberModdingTools.Tasks</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/Zingabopp/BeatSaberModdingTools.Tasks.git</RepositoryUrl>
-    <LangVersion>8</LangVersion>
-  </PropertyGroup>
-  
-  <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
-    <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
-  </PropertyGroup>
-  
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0</TargetFrameworks>
-    <RootNamespace>BeatSaberModdingTools.Tasks</RootNamespace>
-    <AssemblyName>BeatSaberModdingTools.Tasks</AssemblyName>
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <IsPackable>true</IsPackable>
-    <IsTestProject>false</IsTestProject>
-    <BuildOutputTargetFolder>tasks</BuildOutputTargetFolder>
-    <Platforms>AnyCPU</Platforms>
-    <!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PropertyGroup>
+        <id>BeatSaberModdingTools.Tasks</id>
+        <Title>BeatSaberModdingTools.Tasks</Title>
+        <Version>2.0.0</Version>
+        <Authors>Zingabopp</Authors>
+        <Company>Zingabopp</Company>
+        <Description>A set of MSBuild Tasks created for Beat Saber Modding Tools.</Description>
+        <Copyright>Copyright © Zingabopp 2020</Copyright>
+        <PackageLicenseFile>LICENSE</PackageLicenseFile>
+        <RepositoryType>git</RepositoryType>
+        <PackageProjectUrl>https://github.com/Zingabopp/BeatSaberModdingTools.Tasks</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/Zingabopp/BeatSaberModdingTools.Tasks.git</RepositoryUrl>
+        <LangVersion>8</LangVersion>
+    </PropertyGroup>
 
-    <!-- Optional: Embed source files that are not tracked by the source control manager in the PDB -->
-    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
 
-    <!-- Optional: Build symbol package (.snupkg) to distribute the PDB containing Source Link -->
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <developmentDependency>true</developmentDependency>
-    <NoWarn>NU5100</NoWarn>
-  </PropertyGroup>
-  
-  <PropertyGroup>
-    <DocumentationFile>BeatSaberModdingTools.Tasks.xml</DocumentationFile>
-    <PackageTags>Beat Saber;BeatSaberModdingTools</PackageTags>
-    <PackageReleaseNotes>* IsProcessRunning
-  * Does not stop build on errors.
-  * Only supported in Windows
-  * Added 'Fallback' value option for if it fails.</PackageReleaseNotes>
-    <PackageIcon>bsmt.tasks_icon.png</PackageIcon>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>netstandard2.0</TargetFramework>
+        <RootNamespace>BeatSaberModdingTools.Tasks</RootNamespace>
+        <AssemblyName>BeatSaberModdingTools.Tasks</AssemblyName>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+        <IsPackable>true</IsPackable>
+        <IsTestProject>false</IsTestProject>
+        <BuildOutputTargetFolder>tasks</BuildOutputTargetFolder>
+        <Platforms>AnyCPU</Platforms>
+        <!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
 
-  <ItemGroup>
-    <Content Include="BeatSaberModdingTools.Tasks.TargetFramework.props" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.props" />
-    <Content Include="BeatSaberModdingTools.Tasks.targets" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.targets" />
-    <Content Include="BSMT.DefaultProps.props" Pack="true" PackagePath="build\BSMT.DefaultProps.props" />
-    <Content Include="BSMT.DefaultTargets.targets" Pack="true" PackagePath="build\BSMT.DefaultTargets.targets" />
-    <!--<Content Include="BeatSaberModdingTools.Tasks.TargetFrameworks.props" Pack="true" PackagePath="buildMultiTargeting\BeatSaberModdingTools.Tasks.props" />-->
-  </ItemGroup>
+        <!-- Optional: Embed source files that are not tracked by the source control manager in the PDB -->
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
 
-  <ItemGroup>
-    <Compile Remove="nupkgs\**" />
-    <EmbeddedResource Remove="nupkgs\**" />
-    <None Remove="nupkgs\**" />
-    <None Include="..\LICENSE">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-    <None Include="bsmt.tasks_icon.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
-  </ItemGroup>
+        <!-- Optional: Build symbol package (.snupkg) to distribute the PDB containing Source Link -->
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <developmentDependency>true</developmentDependency>
+        <NoWarn>NU5100</NoWarn>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <!-- NuGetizer makes controlling NuGet pack *much* nicer -->
-    <PackageReference Include="NuGetizer" Version="0.7.4">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
-  
-  <ItemGroup Condition="'$(ContinuousIntegrationBuild)' == 'True'">
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-  </ItemGroup>
-  
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-    <PackageReference Include="Microsoft.Build.Framework" Version="16.5.0" />
-    <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.5.0" />
-    <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
-  </ItemGroup>
-  
-  <!--<ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <PropertyGroup>
+        <DocumentationFile>BeatSaberModdingTools.Tasks.xml</DocumentationFile>
+        <PackageTags>Beat Saber;BeatSaberModdingTools</PackageTags>
+        <PackageReleaseNotes>
+            * IsProcessRunning
+            * Does not stop build on errors.
+            * Only supported in Windows
+            * Added 'Fallback' value option for if it fails.
+        </PackageReleaseNotes>
+        <PackageIcon>bsmt.tasks_icon.png</PackageIcon>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <Content Include="BeatSaberModdingTools.Tasks.TargetFramework.props" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.props" />
+        <Content Include="BeatSaberModdingTools.Tasks.targets" Pack="true" PackagePath="build\BeatSaberModdingTools.Tasks.targets" />
+        <Content Include="BSMT.RequiredTargets.targets">
+            <PackagePath>build\BSMT.RequiredTargets.targets</PackagePath>
+            <Pack>true</Pack>
+        </Content>
+        <Content Include="BSMT.DefaultProps.props"
+                 Pack="true" 
+                 PackagePath="build\BSMT.DefaultProps.props" />
+        <Content Include="BuildTypes\BSMT.Test.targets">
+            <PackagePath>build\BuildTypes\BSMT.Test.targets</PackagePath>
+            <Pack>true</Pack>
+        </Content>
+        <Content Include="BuildTypes\BSMT.BSIPA.targets">
+            <PackagePath>build\BuildTypes\BSMT.BSIPA.targets</PackagePath>
+            <Pack>true</Pack>
+        </Content>
+        <!--<Content Include="BeatSaberModdingTools.Tasks.TargetFrameworks.props" Pack="true" PackagePath="buildMultiTargeting\BeatSaberModdingTools.Tasks.props" />-->
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Remove="nupkgs\**" />
+        <EmbeddedResource Remove="nupkgs\**" />
+        <None Remove="nupkgs\**" />
+        <None Remove="BSMT.RequiredTargets.targets" />
+        <None Remove="BuildTypes\BSMT.BSIPA.targets" />
+        <None Remove="BuildTypes\BSMT.Test.targets" />
+        <None Include="..\LICENSE">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+        <None Include="bsmt.tasks_icon.png">
+            <Pack>True</Pack>
+            <PackagePath></PackagePath>
+        </None>
+    </ItemGroup>
+
+    <ItemGroup>
+        <!-- NuGetizer makes controlling NuGet pack *much* nicer -->
+        <PackageReference Include="NuGetizer" Version="0.7.4">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup Condition="'$(ContinuousIntegrationBuild)' == 'True'">
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    </ItemGroup>
+
+    <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
+        <PackageReference Include="Microsoft.Build.Framework" Version="16.5.0" />
+        <PackageReference Include="Microsoft.Build.Tasks.Core" Version="16.5.0" />
+        <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
+    </ItemGroup>
+
+    <!--<ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
     <PackageReference Include="Microsoft.Build.Framework" Version="15.9.20" />
     <PackageReference Include="Microsoft.Build.Tasks.Core" Version="15.9.20" />
     <PackageReference Include="System.Diagnostics.Process" Version="4.3.0" />
   </ItemGroup>-->
-  
-  <Target Name="GithubActionsInfo" AfterTargets="Build">
-    <Message Text="::set-output name=filename::$(AssemblyName)-$(PackageVersion)" Importance="high" />
-    <Message Text="::set-output name=assemblyname::$(AssemblyName)" Importance="high" />
-  </Target>
+
+    <Target Name="GithubActionsInfo" AfterTargets="Pack">
+        <Message Text="::set-output name=filename::$(AssemblyName)-$(PackageVersion)" Importance="high" />
+        <Message Text="::set-output name=assemblyname::$(AssemblyName)" Importance="high" />
+        <Message Text="Output: '$(OutDir)' -> '$(HOMEDRIVE)$(HOMEPATH)\Nuget\$(AssemblyName)-$(PackageVersion).nupkg'" Importance="high" />
+        <Copy SourceFiles="$(OutDir)..\$(AssemblyName).$(PackageVersion).nupkg" DestinationFiles="$(HOMEDRIVE)$(HOMEPATH)\Nuget\$(AssemblyName).$(PackageVersion).nupkg"/>
+    </Target>
 </Project>
